# upworkber

./: README.md  pyproject.toml  scrap_browse_listings.py
.github/workflows/: docker-build.yaml  eks-deploy.yaml
deploy/basic/: deployment.yaml  service.yaml
docker/: Dockerfile  docker-compose-local.yml
src/liquibase/: dbchangelog.sql
src/main/python/: webapp.py
src/main/python/pricing_service/db/: __init__.py  database.py
src/main/python/pricing_service/model/db/: __init__.py  acquisition.py  inventory.py  known_product.py  local_listing.py  market_metadata.py
src/main/python/pricing_service/service/: __init__.py  base.py  craigslist.py  ebay.py  facebook.py  local_listings.py  local_markets.py  openai.py  system.py
src/main/resources/: final-products-with-used-resale.json  updated-with-shipping.json
src/test/python/db/: conftest.py
src/test/python/db/model/: test_known_products.py  test_local_listing.py
src/test/resources/: cl-listings.json  fbm-listing-detail-1.json  inventory.json  test-acqisition.json
