[tool.poetry]
name = "x.x.pricing-service"
version = "0.0.0" # placeholder
description = "Pricing Service"
authors = ["ABC <abc@cbs.com>"]
readme = "README.md"
repository = "https://github.com/bercikr/pricing-service"
classifiers = ["Private :: Do not Upload"]
packages = [{ include = "pricing_service", from = "src/main/python" }]

[tool.poetry.dependencies]
python = "3.12.3"
sqlalchemy = "2.0.25"
pyyaml = "6.0.1"
pydantic = "2.10.4"
quart = "0.19.4"
quart-cors = "0.7.0"
quart-schema = "0.19.0"
ddtrace = "2.6.0"
selenium = "4.30.0"
webdriver-manager = "4.0.2"
chromedriver-py = "128.0.6613.137"
chromedriver-binary = "130.0.6710.0.0"
beautifulsoup4 = "4.12.3"
browser-use = "0.1.40"
python-dotenv = "1.0.1"
openai = "1.68.2"
psycopg2-binary = "2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "0.23.4"
pytest-html = "4.1.1"
aioresponses = "0.7.6"
testcontainers = "4.8.0"
setuptools = "75.8.0"  # temp fix for old PyCharm versions

[tool.pytest.ini_options]
addopts = "-rf"
testpaths = ["src/test/python"]
junit_family = "xunit2"
asyncio_mode = "auto"
filterwarnings = ["ignore:datetime.datetime:DeprecationWarning", "ignore:The 'span':ddtrace.DDTraceDeprecationWarning"]
